# django-settings-object

./: .gitignore  README.md  setup.cfg  setup.py
settings_object/: __init__.py  appsettings.py
