[metadata]
name = django-settings-object
description = Django utilities for building settings objects.
long_description = file: README.md
author = Matt Pryor
author_email = matt.pryor@stfc.ac.uk
url = https://github.com/cedadev/django-settings-object


[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
django = django
